--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
     <script src="./assets/js/index.js" defer></script>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <div id="Version"></div>
+    <span class="text-3xl">Hello World</span>
+    <br>
+    <span class="text-xl">Running these dependencies...</span>
+    <div id="Deps"></div>
 </body>
 </html>
